# CloudMusic

./: README.md
images/: temp.py  temp2.py  temp3.py
images/QSS/: header.qss  mainContent.qss  phoneAndEMailFrame.qss  playWidgets.qss
musicplayer/: CMakeLists.txt  ZH_CN.qm  ZH_CN.ts  main.cpp  musicplayer.pro  musicplayer_zh_CN.ts  res.qrc  vs_genSln.bat
musicplayer/apis/: neteaseencode.cpp  neteaseencode.h
musicplayer/features/: configdownloadframefeatures.cpp  configmainfeatures.cpp  configmainfeatures.h  configneteasefeatures.cpp
musicplayer/netEaseApi_test/: all_playlist.py  details_playlist.py  encode.py  fnewsong.py  getContainedPlaylists.py  getPicture.py  login.py  lyric.py  newsong.py  search.py  singsUrl.py  user_playlist.py
musicplayer/widgets/: base.h  player.cpp  player.h
